welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:2: error: identifier expected but 'false' found.
while (getColorSol():Green==false)
                            ^Balin:17: error: ')' expected but '}' found.
	}
        ^